# iot-api-python

./: .gitignore  README.md  app.py  config.ini  create.html  create_device.md  devices.py  pyproject.toml
api/: devices.py  helper_functions.py  sensor.py
content/: create_device.md
static/css/: style.css
templates/: auth.html  base.html  buckets.html  create.html  data.html  devices.html  help.html  index.html  write.html
